--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,6 +10,6 @@
    year = {2018},
    month={July},
    type={Master's Thesis},
-   note={"\url{https://bth.diva-portal.org/smash/record.jsf?pid=diva2%3A1230378}"},
+   note={{<a href=https://bth.diva-portal.org/smash/record.jsf?pid=diva2%3A1230378>Read it here</a>}},
    selected={true}
 }
